myteo/test/analyze/type_check/match/expression.exp
Error: Expected type `String` but found `Int`
test/analyze/type_check/match/expression.myte:14:11
 14 |     | 2 -> 2
    |            ^

Error: Expected type `String` but found `Unit`
test/analyze/type_check/match/expression.myte:15:11-13
 15 |     | _ -> ()
    |            ^^

Error: Expected type `Unit` but found `String`
test/analyze/type_check/match/expression.myte:20:11-14
 20 |     | 2 -> "a"
    |            ^^^